# qt-proj-startpoint

./: .gitignore  CMakeLists.txt  README.md  main.cpp
App/: App.cpp  App.h  AppException.cpp  AppException.h  CMakeLists.txt  main.cpp  qml.qrc
Core/: CMakeLists.txt  CoreException.cpp  CoreException.h
Core/Base/: Base.h  Concepts.h  Definitions.h  Exception.cpp  Exception.h  Pimpl.h
Core/Interfaces/: IModule.h
Core/Log/: Logger.cpp  Logger.h  LoggerManager.cpp  LoggerManager.h  LoggerManagerPrivate.cpp  LoggerManagerPrivate.h  LoggingDevice.cpp  LoggingDevice.h
Core/Module/: Module.cpp  Module.h  ModuleException.cpp  ModuleException.h  ModulePrivate.cpp  ModulePrivate.h
Gui/: CMakeLists.txt  Gui.cpp  Gui.h  GuiException.cpp  GuiException.h
Test/: CMakeLists.txt  Module-Test.cpp  main.cpp  test_main.cpp  test_main_2.cpp
